# taskbar_lrc_rs

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  widget.rs
src/font/: loader.rs  mod.rs
src/graphics/: renderer.rs
src/lyrics/: cache.rs  data.rs  errors.rs  http_client.rs  manager.rs  mod.rs  service.rs
src/lyrics/api/: common.rs  mod.rs  netease.rs  qqmusic.rs
src/system/: events.rs  media.rs  mod.rs  playback_timer.rs  taskbar.rs
src/window/: creation.rs  mod.rs  positioning.rs
