[package]
name = "taskbar_lrc"
version = "0.1.0"
edition = "2024"
description = "Windows 任务栏歌词显示器"
authors = ["uiyzzi <yuckkiko@gmail.com>"]

[lib]
name = "taskbar_lrc"
path = "src/lib.rs"

[[bin]]
name = "taskbar_lrc"
path = "src/main.rs"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_System_SystemServices",
    "Win32_UI_Accessibility",
    "Media_Control",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections"
] }
winit = "0.30"
softbuffer = "0.4"
fontdue = "0.9"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
fastrand = "2.0"
dirs = "5.0"
futures = "0.3"
lazy_static = "1.5.0"
pollster = "0.3"

[dev-dependencies]
tempfile = "3.0"
